added tags; new article cod procedura penala

--- a/_posts/2018-06-17-mumbai.md
+++ b/_posts/2018-06-17-mumbai.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: Mumbai
-tags: india,nonfiction
+tags: 
+ - india
+ - trăite
 notes:
  - hashtag: 'vorbededuh'
    content: '"Totul e bun in cantități moderate."'
